Fixed broken layouting

--- a/resources/css_generals.css
+++ b/resources/css_generals.css
@@ -76,8 +76,10 @@
 
 	[id~="nav"] {
 
-		overflow: visible;
-		margin-bottom: 110px;
+		overflow: hidden;
+		margin-bottom: 225px;
+		padding-top: 9px;
+		margin-top: -11px;
 
 	}
 
